# nvec

./: .gitignore  CMakeLists.txt  README.md
cmake/: hmsh.cmake  json.cmake
demo/: CMakeLists.txt  demo_anisotopic.cpp  demo_anisotopic_1.cpp  demo_face_anisotopic.cpp  demo_face_rosy.cpp  demo_json.cpp  demo_killing_field.cpp  demo_vert_rosy.cpp  input.json  pretty.json
include/nvec/: base_field.h  face_combing.h  face_rosy_field.h  face_seaming.h  face_tangent_field.h  vert_rosy_field.h
include/nvec/FaceBase/: FrameField.h
include/nvec/IO/: JsonIO.h
include/nvec/face/: FrameField.h  combing.h  frame_field.h  rosy_field.h  seaming.h  serializer.h
include/nvec/io/: json.h
include/nvec/linearsolver/: linear_solver.h  suitesparse_square.h
include/nvec/solver/: linear_solver.h  suitesparse_pdefinite.h  suitesparse_umfpack.h  suitesparse_utilities.h
include/nvec/vert/: rosy_field.h
